--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!--Barra de Navegacion-->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" name="button"></button>
+        <a href="" class="navbar-brand"><stron>JG-Dev</stron></a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Acerca de</a></li>
+          <li><a href="#">Comprar</a></li>
+          <li><a href="#">Newsletter</a></li>
+          <li><a href="#">Miembro</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--Fin Barra de Navegacion-->
+
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="---">
+          <h1>Lorem ipsum dolor sit amet, esse illo officia.</h1>
+          <form action="" class="form-inline">
+            <div class="form-group">
+              <input type="text" class="form-control" id="suscribir" placeholder="Introdusca su email">
+              <button type="submit" class="btn btn-info btn-lg">Suscribirme</button>
+            </div>
+          </form>
+        </div>
+        <div class="--">
+          <img src="img/celular.png" alt="">
+        </div>
+      </div>
+    </div>
+  </header>
+
 
 
 
