--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </nav>
   <!--Fin Barra de Navegacion-->
-
+  <!--Header-->
   <header>
     <div class="container">
       <div class="row">
@@ -40,11 +40,91 @@
           </form>
         </div>
         <div class="--">
-          <img src="img/celular.png" alt="">
+          <img src="img/celular.png" alt="" class="img-responsive center-block">
         </div>
       </div>
     </div>
   </header>
+  <!--Fin Header-->
+
+  <div class="container">
+    <div class="row centrado">
+      <div class="--">
+        <h1>Titulo de la Seccion</h1>
+        <h3>Subtitulo de la Seccion</h3>
+      </div>
+    </div>
+    <!--Primero seccion-->
+    <div class="row centrado">
+      <div class="--">
+        <img src="img/servicios.png" alt="" width="140px" class="img-circle">
+        <h4>Titulo de las minuatuas</h1>
+        <p>Descripción de la miniatura Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Enim, libero, autem? Incidunt nihil ut at,
+          recusandae obcaecati eveniet neque, perferendis magni debitis quibusdam excepturi
+          magnam esse nesciunt expedita. Illo, natus.</p>
+      </div>
+      <div class="--">
+        <img src="img/servicios.png" alt="" width="140px" class="img-circle">
+        <h4>Titulo de las minuatuas</h1>
+        <p>Descripción de la miniatura Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Enim, libero, autem? Incidunt nihil ut at,
+          recusandae obcaecati eveniet neque, perferendis magni debitis quibusdam excepturi
+          magnam esse nesciunt expedita. Illo, natus.</p>
+      </div>
+      <div class="--">
+        <img src="img/servicios.png" alt="" width="140px" class="img-circle">
+        <h4>Titulo de las minuatuas</h1>
+        <p>Descripción de la miniatura Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Enim, libero, autem? Incidunt nihil ut at,
+          recusandae obcaecati eveniet neque, perferendis magni debitis quibusdam excepturi
+          magnam esse nesciunt expedita. Illo, natus.</p>
+      </div>
+    </div>
+    <!--Fin Primero seccion-->
+
+    <hr class="container">
+
+    <div class="row centrado">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="..." alt="...">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+            <div class="item">
+              <img src="..." alt="...">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+            ...
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
+    </div>
+
+  </div>
+
 
 
 
