--- a/index.html
+++ b/index.html
@@ -85,45 +85,94 @@
 
     <hr class="container">
 
-    <div class="row centrado">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-          </ol>
+    <!--Segunda Seccion-->
+    <div class="container">
+      <div class="row centrado">
+        <div>
+          <h1>Titulo del Carousel</h1>
+          <h3>Subtitulo o descripcion del Carousel</h3>
+        </div>
+      </div>
+      <div class="row centrado">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
 
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <img src="..." alt="...">
-              <div class="carousel-caption">
-                ...
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="img/cel3.png" alt="...">
+              </div>
+              <div class="item">
+                <img src="img/cel1.png" alt="...">
+              </div>
+              <div class="item">
+                <img src="img/cel2.png" alt="...">
               </div>
             </div>
-            <div class="item">
-              <img src="..." alt="...">
-              <div class="carousel-caption">
-                ...
-              </div>
-            </div>
-            ...
-          </div>
-
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        </div>
       </div>
     </div>
-
   </div>
+  <!--Fin Segunda Seccion-->
+
+  <hr class="container">
+  <div class="container">
+    <div class="row centrado">
+      <div>
+        <h1>Nuestro Aquipo</h1>
+        <h3>Descripcion del equipo </h3>
+      </div>
+    </div>
+    <div class="row centrado">
+      <div>
+        <img src="img/avatar.png" alt="" class="img-circle" width="140px">
+        <h4>Ivan Jaramillo</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commod</p>
+        <p><i class="glyphicon glyphicon-briefcase"></i><i class="glyphicon glyphicon-link"></i><i class="glyphicon glyphicon-globe"></i></p>
+      </div>
+      <div>
+        <img src="img/avatar.png" alt="" class="img-circle" width="140px">
+        <h4>Ivan Jaramillo</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commod</p>
+        <p><i class="glyphicon glyphicon-briefcase"></i><i class="glyphicon glyphicon-link"></i><i class="glyphicon glyphicon-globe"></i></p>
+      </div>
+      <div>
+        <img src="img/avatar.png" alt="" class="img-circle" width="140px">
+        <h4>Ivan Jaramillo</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commod</p>
+        <p><i class="glyphicon glyphicon-briefcase"></i><i class="glyphicon glyphicon-link"></i><i class="glyphicon glyphicon-globe"></i></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <hr>
+    <div class="row centrado">
+      <div class="--">
+        <form action="" class="form-inline">
+          <div class="form-group">
+            <input type="text" class="form-control" id="suscribir" placeholder="Introdusca su email">
+            <button type="submit" class="btn btn-info btn-lg">Suscribirme</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <hr>
+
+    <p class="centrado"><a href="">Derechos Reservdos</a>-JGDev</p>
+  </div>
+
 
 
 
